--- a/frontend/src/map-annotator-pose/map-annotator-pose.html
+++ b/frontend/src/map-annotator-pose/map-annotator-pose.html
@@ -17,7 +17,7 @@
     <ros-topic
       auto
       id="userActions"
-      topic="/user_actions"
+      topic="/map_annotator/user_actions"
       ros="{{ros}}"
       msg-type="map_annotator/UserAction"
     ></ros-topic>
