--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,12 @@
     <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
     <link rel="import" href="/src/map-annotator-app/map-annotator-app.html">
+    <style>
+      html {
+        height: 100%;
+        background-color: #fafafa;
+      }
+    </style>
   </head>
   <body>
     <map-annotator-app></map-annotator-app>
