--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,13 +12,15 @@
 
     <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
-    <link rel="import" href="/src/map-annotator-app/map-annotator-app.html">
     <style>
-      html {
-        height: 100%;
+      html, body {
         background-color: #fafafa;
+        height: 100%;
+        margin: 0;
+        padding: 0;
       }
     </style>
+    <link rel="import" href="/src/map-annotator-app/map-annotator-app.html">
   </head>
   <body>
     <map-annotator-app></map-annotator-app>
