Change to a lighter background.

--- a/frontend/src/map-annotator-app/map-annotator-app.html
+++ b/frontend/src/map-annotator-app/map-annotator-app.html
@@ -86,7 +86,7 @@
       ready: function() {
         this.$.rviz.loadConfig({
           globalOptions: {
-            background: '#113344',
+            background: '#cccccc',
             fixedFrame: '/map',
           },
           displays: [
