--- a/frontend/src/map-annotator-app/map-annotator-app.html
+++ b/frontend/src/map-annotator-app/map-annotator-app.html
@@ -41,7 +41,6 @@
     <ros-topic
       auto
       last-message="{{poseList}}"
-      on-message="handlePoseList"
       topic="/map_annotator/pose_names"
       ros="{{ros}}"
       msg-type="map_annotator/PoseNames"
@@ -54,10 +53,6 @@
       msg-type="map_annotator/UserAction"
     ></ros-topic>
     <div class="layout vertical">
-      <h2>Map annotator</h2>
-      <div>
-        Websocket status: {{status}}
-      </div>
       <div id="content" class="horizontal layout flex">
         <div id="controls">
           <h3>Poses</h2>
@@ -77,10 +72,6 @@
       is: 'map-annotator-app',
 
       properties: {
-        status: {
-          type: String,
-          value: 'Unknown.',
-        },
       },
 
       ready: function() {
@@ -131,19 +122,15 @@
       },
 
       handleConnection: function() {
-        this.status = 'Connected to websocket server.';
+        console.log('Connected to websocket server.');
       },
 
       handleClose: function() {
-        this.status = 'Closed connection to websocket server.';
+        console.log('Closed connection to websocket server.');
       },
 
       handleError: function() {
-        this.status = 'Error connecting to websocket server.';
-      },
-
-      handlePoseList: function(evt) {
-        var msg = evt.detail;
+        console.error('Error connecting to websocket server.');
       },
 
       handleAdd: function() {
